# cmake-framework

./: .readthedocs.yaml  CMakeLists.txt  LICENSE  LICENSE.md  README.md
cmake/: CMakeLists.txt
cmake/finders/: CMakeLists.txt  FindBash.cmake  FindCMD.cmake  FindPip3.cmake  FindRailroad.cmake  FindSphinx.cmake  FindVirtualenv.cmake
cmake/modules/: CMakeLists.txt  DocSphinx.cmake  GlobalOptions.cmake  Init.cmake  UseRailroad.cmake  UseVirtualenv.cmake
cmake/modules/UseVirtualenv/: venv_executor.bash.in  venv_executor.batch.in
cmake/templates/: CMakeFrameworkConfig.cmake.in  CMakeLists.txt
cmake/tools/: CMakeLists.txt  ControlFlow.cmake  Debug.cmake  Printer.cmake  Utilities.cmake
docs/: CMakeLists.txt  conf.py.in  index.rst  intersphinx.rst
docs/manual/: cmake-framework-env-variables.rst  cmake-framework-modules.rst  cmake-framework-variables.rst
docs/module/: ControlFlow.rst  Debug.rst  FindBash.rst  FindCMD.rst  FindPip3.rst  FindRailroad.rst  Init.rst  Printer.rst  UseRailroad.rst  Utilities.rst
docs/templates/: layout.html
tests/: CMakeLists.txt
tests/finders/: CMakeLists.txt
tests/finders/Bash/: CMakeLists.txt
tests/finders/CMD/: CMakeLists.txt
tests/finders/Railroad/: CMakeLists.txt
tests/modules/: CMakeLists.txt
tests/modules/UseRailroad/: CMakeLists.txt  rr.syntax.ebnf
tests/test_env/: envFetchContent.cmake  envFindJava.cmake  envFindPackageHandleStandardArgs.cmake  envUseJava.cmake
