cmake_minimum_required(VERSION 3.12)

# test tree should start here

## TODO:VSH initial state check

## Utilities check
## Finders check
## Tools check

## Development zone


#find_package(Pip3)
#find_package(Virtualenv)

#find_pip_package(sphinxcontrib-moderncmakedomain)

#include(UseVirtualenv)

#virtualenv_install(pyxml2dict)
#find_pip_package(pygccxml)

#find_package(Sphinx COMPONENTS apidoc quickstart)
#CF_dump_variables(EXTRA_CLEAN)
